# python-polylith-example-pdm

./: .pdm-python  README.md  pyproject.toml
components/example/kafka/: consumer.py
projects/consumer_project/: pyproject.toml
projects/message_fastapi_project/: pyproject.toml
projects/my_aws_lambda_project/: pyproject.toml
projects/my_fastapi_project/: pyproject.toml
projects/my_gcp_function_project/: Makefile  pyproject.toml
