[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "python-polylith-example-pdm"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "David Vujic" }]

dependencies = [
    "fastapi~=0.106.0",
    "uvicorn~=0.25.0",
    "functions-framework~=3.5.0",
    "sqlalchemy~=2.0.23",
    "confluent-kafka~=2.3.0",
    "black~=23.12.1",
    "isort~=5.13.2",
    "mypy~=1.8.0",
    "pytest~=7.4.3",
]

[tool.polylith.bricks]
"bases/example/message_api" = "example/message_api"
"bases/example/consumer" = "example/consumer"
"bases/example/greet_api" = "example/greet_api"
"bases/example/greet_gcp_function" = "example/greet_gcp_function"
"bases/example/greet_aws_lambda" = "example/greet_aws_lambda"
"components/example/message" = "example/message"
"components/example/dictionaries" = "example/dictionaries"
"components/example/greeting" = "example/greeting"
"components/example/database" = "example/database"
"components/example/schema" = "example/schema"
"components/example/log" = "example/log"
"components/example/kafka" = "example/kafka"

[tool.isort]
profile = "black"
