[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "consumer_project"
version = "0.1.0"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.8"

dependencies = [
  "confluent-kafka~=2.3.0",
]

[project.scripts]
consumer = "example.consumer.core:main"

[tool.polylith.bricks]
"../../bases/example/consumer" = "example/consumer"
"../../components/example/log" = "example/log"
"../../components/example/kafka" = "example/kafka"