[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "my_fastapi_project"
version = "0.0.1"
description = 'A Python Polylith example code repo'
authors = [{ name = "David Vujic" }]

requires-python = ">=3.9"

dependencies = [
  "fastapi~=0.106.0",
  "uvicorn~=0.25.0",
]

[tool.polylith.bricks]
"../../bases/example/greet_api" = "example/greet_api"
"../../components/example/greeting" = "example/greeting"
"../../components/example/log" = "example/log"
